# map_trap

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Vagrantfile  map_trap.pptx
.cmake/: build_type.cmake  compiler_flags.cmake  git_hooks.cmake
.hooks/: pre-commit-clang-format
include/: add_to_map.hpp  book_bm.hpp  common.hpp  find_bm.hpp  generic_map_bm.hpp  insert_bm.hpp  iterate_bm.hpp
include/header_only/: header.hpp
include/num_gen/: num_gen.hpp
include/simplelib/: simple.hpp
lib/: CMakeLists.txt
lib/simplelib/: CMakeLists.txt  simple.cpp
scripts/: illegal_data_structures.sh
src/: CMakeLists.txt
test/perf/: CMakeLists.txt  book.cpp  find.cpp  flat_map_find.cpp  flat_map_insert.cpp  flat_map_iterate.cpp  insert.cpp  iterate.cpp  map_baseline.cpp  map_find.cpp  map_insert.cpp  map_iterate.cpp  unordered_map_find.cpp  unordered_map_insert.cpp  unordered_map_insert_sort.cpp  unordered_map_insert_sort_iterate.cpp  unordered_map_iterate.cpp
test/perf/outputs/: flat_map_find.csv  flat_map_find.out  flat_map_insert.csv  flat_map_insert.out  flat_map_iterate.csv  flat_map_iterate.out  map_book.csv  map_find.csv  map_find.out  map_insert.csv  map_insert.out  map_iterate.csv  map_iterate.out  unordered_map_find.csv  unordered_map_find.out  unordered_map_insert.csv  unordered_map_insert.out  unordered_map_insert_sort.csv  unordered_map_insert_sort.out  unordered_map_insert_sort_iterate.csv  unordered_map_insert_sort_iterate.out  unordered_map_iterate.csv  unordered_map_iterate.out
test/unit/: CMakeLists.txt
test/unit/lib/: CMakeLists.txt  header_only.cpp  num_gen.cpp  simplelib.cpp
vagrant.d/: 00-install-dev-tools  01-install-git-clang-format  02-setup-git  03-tmux-settings  10-install-ssh-keys  90-compiler-default  99-clone-repo
